--- a/nscp-user/build.gradle
+++ b/nscp-user/build.gradle
@@ -27,6 +27,8 @@ repositories {
 }
 
 dependencies {
+	implementation project(':common')
+
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
