--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,6 +8,14 @@ group = 'com.ndtp'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
