--- a/ndtp-admin/build.gradle
+++ b/ndtp-admin/build.gradle
@@ -37,6 +37,10 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-core:5.2.1.RELEASE'
 	implementation 'org.apache.taglibs:taglibs-standard-jstlel:1.2.5'
 	
+	implementation 'org.apache.httpcomponents:httpclient'
+	implementation 'org.apache.commons:commons-exec:1.3'
+    implementation 'org.geotools:gt-shapefile:20.2'
+	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
