--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -7,4 +7,5 @@ ndtp.rest-auth-key=
 
 ndtp.gis-rest-server=http://localhost:19090/
 
+ndtp.layer-upload-dir=C:\\data\\ndtp\\ndtp-admin\\upload\\layer\\
 
