--- a/ndtp-admin/build.gradle
+++ b/ndtp-admin/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient'
 	implementation 'org.apache.commons:commons-exec:1.3'
     implementation 'org.geotools:gt-shapefile:20.2'
+    implementation 'org.apache.commons:commons-compress:1.18'
 	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
