--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -9,3 +9,14 @@ ndtp.gis-rest-server=http://localhost:19090/
 
 ndtp.layer-upload-dir=C:\\data\\ndtp\\ndtp-admin\\upload\\layer\\
 
+ndtp.queue-server-host=localhost
+ndtp.queue-server-port=5672
+ndtp.queue-user=0G1qXF6d4mplC9hVNwyEDA==
+ndtp.queue-password=0G1qXF6d4mplC9hVNwyEDA==
+ndtp.queue-name=f4d.converter.queue
+ndtp.exchange=f4d.converter
+
+# The 3d data file uploaded by the user
+ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
+# Converted f4d file directory
+ndtp.user-converter-dir=C:\\data\\mago3d\\converter\\
