--- a/ndtp-admin/build.gradle
+++ b/ndtp-admin/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient'
 	implementation 'org.apache.commons:commons-exec:1.3'
     implementation 'org.geotools:gt-shapefile:20.2'
+    implementation 'org.geotools.xsd:gt-xsd-core:20.2'
+    implementation 'org.geotools.xsd:gt-xsd-sld:20.2'
     implementation 'org.apache.commons:commons-compress:1.18'
 	
 	runtimeOnly 'org.postgresql:postgresql'
