AMQP 서비스 추가

--- a/ndtp-user/build.gradle
+++ b/ndtp-user/build.gradle
@@ -49,11 +49,13 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testCompile 'org.junit.jupiter:junit-jupiter-params'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine'
-	
-	compileOnly 'org.projectlombok:lombok'
+    
+    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 	testCompileOnly 'org.projectlombok:lombok'
+	
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 test {
