converter 변환 1차 완료

--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -19,4 +19,4 @@ ndtp.exchange=f4d.converter
 # The 3d data file uploaded by the user
 ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
 # Converted f4d file directory
-ndtp.user-converter-dir=C:\\data\\mago3d\\converter\\
+ndtp.data-service-dir=C:\\data\\mago3d\\f4d\\
