--- a/ndtp-converter/src/main/resources/ndtp.properties
+++ b/ndtp-converter/src/main/resources/ndtp.properties
@@ -5,7 +5,7 @@ ndtp.server-ip=localhost
 ndtp.rest-template-mode=http
 ndtp.rest-auth-key=
 
-ndtp.gis-rest-server=http://localhost:19090/
+ndtp.cms-rest-server=http://localhost:80
 
 ndtp.queue-server-host=localhost
 ndtp.queue-server-port=5672
