--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -21,3 +21,7 @@ ndtp.exchange=f4d.converter
 ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
 # Converted f4d file directory
 ndtp.data-service-dir=C:\\data\\mago3d\\f4d\\
+
+ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
+ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
+ndtp.data-object-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
