--- a/ndtp-user/build.gradle
+++ b/ndtp-user/build.gradle
@@ -33,9 +33,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	
 	implementation 'org.springframework.security:spring-security-core:5.2.1.RELEASE'
 	implementation 'org.apache.taglibs:taglibs-standard-jstlel:1.2.5'
+	
+	implementation 'org.apache.commons:commons-compress:1.18'
 	
 	runtimeOnly 'org.postgresql:postgresql'
 	
@@ -43,6 +46,7 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude module: 'junit'
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	
@@ -61,4 +65,5 @@ dependencies {
 test {
 	useJUnitPlatform()
 	ignoreFailures = true
+	//exclude '**/*'
 }
