--- a/ndtp-user/src/main/resources/ndtp.properties
+++ b/ndtp-user/src/main/resources/ndtp.properties
@@ -7,4 +7,10 @@ ndtp.rest-auth-key=
 
 ndtp.gis-rest-server=http://localhost:19090/
 
+ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
+# Converted f4d file directory
+ndtp.data-service-dir=C:\\data\\mago3d\\f4d\\
 
+ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
+ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
+ndtp.data-object-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
