--- a/ndtp-converter/src/main/resources/ndtp.properties
+++ b/ndtp-converter/src/main/resources/ndtp.properties
@@ -5,7 +5,8 @@ ndtp.server-ip=localhost
 ndtp.rest-template-mode=http
 ndtp.rest-auth-key=
 
-ndtp.cms-rest-server=http://localhost:9090
+ndtp.cms-user-rest-server=http://localhost
+ndtp.cms-admin-rest-server=http://localhost:9090
 
 ndtp.queue-server-host=localhost
 ndtp.queue-server-port=5672
