dev 설정 파일 추가

--- a/ndtp-user/src/main/resources/dev/ndtp.properties
+++ b/ndtp-user/src/main/resources/dev/ndtp.properties
@@ -5,8 +5,16 @@ ndtp.server-ip=localhost
 ndtp.rest-template-mode=http
 ndtp.rest-auth-key=
 
-ndtp.gis-rest-server=http://192.168.10.9:8080/
+ndtp.gis-rest-server=http://localhost:19090/
 
+ndtp.queue-server-host=localhost
+ndtp.queue-server-port=5672
+ndtp.queue-user=sf0jCnNLr5sAFZIdv8rTTA==
+ndtp.queue-password=sf0jCnNLr5sAFZIdv8rTTA==
+ndtp.queue-name=f4d.converter.queue
+ndtp.exchange=f4d.converter
+
+# The 3d data file uploaded by the user
 ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
 # Converted f4d file directory
 ndtp.data-service-dir=C:\\data\\mago3d\\f4d\\
