사용자 데이터 그룹 경로 수정

--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -21,6 +21,12 @@ ndtp.exchange=f4d.converter
 ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
 # Converted f4d file directory
 ndtp.data-service-dir=C:\\data\\mago3d\\f4d\\
+# 관리자용
+ndtp.admin-data-service-dir=C:\\data\\mago3d\\f4d\\infra\\
+ndtp.admin-data-service-path=infra/
+# 사용자용
+ndtp.user-data-service-dir=C:\\data\\mago3d\\f4d\\service\\
+ndtp.user-data-service-path=service/
 
 ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
