--- a/ndtp-converter/src/main/resources/ndtp.properties
+++ b/ndtp-converter/src/main/resources/ndtp.properties
@@ -19,3 +19,4 @@ ndtp.exchange=f4d.converter
 ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
 # Converted f4d file directory
 ndtp.converter-dir=C:\\F4DConverterConsole\\F4DConverter.exe
+ndtp.converter-manager=java -classpath d:\\ndtp-converter-manager.jar ndtp.domain.F4DConverterManager
