1. add connTimout, idleTimeout, maxLifeTime in hikari 2. add getPermRequest

--- a/ndtp-user/src/main/resources/dev/application.properties
+++ b/ndtp-user/src/main/resources/dev/application.properties
@@ -26,8 +26,11 @@ spring.datasource.url=GvEa084OoJKPfNVpNHbfs/KHGXnmV1yqVqZU7yr5tl/hhztQ/waJPjXxs3
 spring.datasource.username=lxX28XJgkJy2XmCM3zm+rg==
 spring.datasource.password=lxX28XJgkJy2XmCM3zm+rg==
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
 
 
 # 30분. Session timeout in seconds.
