--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -28,6 +28,7 @@ ndtp.admin-data-service-path=infra/
 ndtp.user-data-service-dir=C:\\data\\mago3d\\f4d\\service\\
 ndtp.user-data-service-path=service/
 
+ndtp.data-smart-tiling-dir=C:\\data\\mago3d\\smart-tiling\\
 ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-object-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
