관리자 대시보드 시스템 사용량 actuator 추가, 코드 정리 예정

--- a/ndtp-admin/src/main/resources/application.properties
+++ b/ndtp-admin/src/main/resources/application.properties
@@ -55,3 +55,7 @@ spring.servlet.multipart.max-request-size=2048MB
 server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css
 server.compression.min-response-size=20
+
+# actuator
+management.endpoints.web.exposure.include=info,health,metrics
+management.endpoint.health.show-details=always
