--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -32,3 +32,7 @@ ndtp.data-smart-tiling-dir=C:\\data\\mago3d\\smart-tiling\\
 ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-object-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
+
+
+#\uAC00\uC774\uB4DC \uB370\uC774\uD130 \uACBD\uB85C
+ndtp.guide-data-service-dir=C:\\data\\mago3d\\guide\\f4d\\
