--- a/ndtp-user/src/main/resources/ndtp.properties
+++ b/ndtp-user/src/main/resources/ndtp.properties
@@ -28,3 +28,6 @@ ndtp.user-data-service-path=service/
 ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-object-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
+
+#가이드 데이터 경로
+ndtp.guide-data-service-dir=C:\\data\\mago3d\\guide\\f4d\\
