ifc 파일 업로드 기능 구현

--- a/ndtp-user/src/main/resources/ndtp.properties
+++ b/ndtp-user/src/main/resources/ndtp.properties
@@ -16,6 +16,7 @@ ndtp.exchange=f4d.converter
 
 # The 3d data file uploaded by the user
 ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
+
 # Converted f4d file directory
 ndtp.data-service-dir=C:\\data\\mago3d\\f4d\\
 # 관리자용
@@ -28,3 +29,11 @@ ndtp.user-data-service-path=service/
 ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-object-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
+
+# service f4d converter
+ndtp.service-f4d-run-dir=C:\\F4d\\F4DConverter.exe
+ndtp.service-f4d-input-dir=C:\\data\\mago3d\\f4d\\ds-service\\input\\
+ndtp.service-f4d-output-dir=C:\\data\\mago3d\\f4d\\ds-service\\output\\
+ndtp.service-f4d-finish-root-dir=C:\\data\\mago3d\\f4d\\ds-service\\finish\\
+ndtp.service-f4d-fail-root-dir=C:\\data\\mago3d\\f4d\\ds-service\\fail\\
+ndtp.service-file-upload-dir=C:\\data\\mago3d\\normal-upload-data\\
