관리자 일괄 데이터 업로딩 기능 추가

--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -7,9 +7,6 @@ ndtp.rest-auth-key=
 
 ndtp.gis-rest-server=http://localhost:19090/
 
-ndtp.layer-upload-dir=C:\\data\\ndtp\\ndtp-admin\\upload\\layer\\
-ndtp.layer-export-dir=C:\\data\\ndtp\\ndtp-admin\\export\\temp\\
-
 ndtp.queue-server-host=localhost
 ndtp.queue-server-port=5672
 ndtp.queue-user=qKC0oX5lnFU7C7tyXmqfdg==
@@ -17,8 +14,6 @@ ndtp.queue-password=qKC0oX5lnFU7C7tyXmqfdg==
 ndtp.queue-name=f4d.converter.queue
 ndtp.exchange=f4d.converter
 
-# The 3d data file uploaded by the user
-ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
 # Converted f4d file directory
 ndtp.data-service-dir=C:\\data\\mago3d\\f4d\\
 # 관리자용
@@ -28,11 +23,16 @@ ndtp.admin-data-service-path=infra/
 ndtp.user-data-service-dir=C:\\data\\mago3d\\f4d\\service\\
 ndtp.user-data-service-path=service/
 
+# The 3d data file uploaded by the user
+ndtp.data-upload-dir=C:\\data\\mago3d\\upload-data\\
+ndtp.data-bulk-upload-dir=C:\\data\\mago3d\\bulk-upload-data\\
 ndtp.data-smart-tiling-dir=C:\\data\\mago3d\\smart-tiling\\
 ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-object-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
 
+ndtp.layer-upload-dir=C:\\data\\ndtp\\ndtp-admin\\upload\\layer\\
+ndtp.layer-export-dir=C:\\data\\ndtp\\ndtp-admin\\export\\temp\\
 
 #\uAC00\uC774\uB4DC \uB370\uC774\uD130 \uACBD\uB85C
 ndtp.guide-data-service-dir=C:\\data\\mago3d\\guide\\f4d\\
