--- a/ndtp-converter/src/main/resources/ndtp.properties
+++ b/ndtp-converter/src/main/resources/ndtp.properties
@@ -15,7 +15,8 @@ ndtp.queue-password=qKC0oX5lnFU7C7tyXmqfdg==
 ndtp.queue-name=f4d.converter.queue
 ndtp.exchange=f4d.converter
 
-# The 3d data file uploaded by the user
-ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
 # Converted f4d file directory
 ndtp.converter-dir=C:\\F4DConverterConsole\\F4DConverter.exe
+
+# The 3d data file uploaded by the user
+ndtp.data-upload-dir=C:\\data\\mago3d\\upload-data\\
