--- a/ndtp-user/src/main/resources/develop/ndtp.properties
+++ b/ndtp-user/src/main/resources/develop/ndtp.properties
@@ -14,11 +14,20 @@ ndtp.queue-password=sf0jCnNLr5sAFZIdv8rTTA==
 ndtp.queue-name=f4d.converter.queue
 ndtp.exchange=f4d.converter
 
-# The 3d data file uploaded by the user
-ndtp.upload-data-dir=C:\\data\\mago3d\\upload-data\\
 # Converted f4d file directory
 ndtp.data-service-dir=C:\\data\\mago3d\\f4d\\
+# 관리자용
+ndtp.admin-data-service-dir=C:\\data\\mago3d\\f4d\\infra\\
+ndtp.admin-data-service-path=infra/
+# 사용자용
+ndtp.user-data-service-dir=C:\\data\\mago3d\\f4d\\service\\
+ndtp.user-data-service-path=service/
 
+# The 3d data file uploaded by the user
+ndtp.data-upload-dir=C:\\data\\mago3d\\upload-data\\
 ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-object-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
+
+# 가이드 데이터 경로
+ndtp.guide-data-service-dir=C:\\data\\mago3d\\guide\\f4d\\
