--- a/ndtp-admin/src/main/resources/develop/ndtp.properties
+++ b/ndtp-admin/src/main/resources/develop/ndtp.properties
@@ -5,12 +5,12 @@ ndtp.server-ip=localhost
 ndtp.rest-template-mode=http
 ndtp.rest-auth-key=
 
-ndtp.gis-rest-server=http://localhost:19090/
+ndtp.gis-rest-server=http://192.168.10.9:8080/
 
 ndtp.queue-server-host=localhost
 ndtp.queue-server-port=5672
-ndtp.queue-user=qKC0oX5lnFU7C7tyXmqfdg==
-ndtp.queue-password=qKC0oX5lnFU7C7tyXmqfdg==
+ndtp.queue-user=sf0jCnNLr5sAFZIdv8rTTA==
+ndtp.queue-password=sf0jCnNLr5sAFZIdv8rTTA==
 ndtp.queue-name=f4d.converter.queue
 ndtp.exchange=f4d.converter
 
@@ -25,9 +25,14 @@ ndtp.user-data-service-path=service/
 
 # The 3d data file uploaded by the user
 ndtp.data-upload-dir=C:\\data\\mago3d\\upload-data\\
+ndtp.data-bulk-upload-dir=C:\\data\\mago3d\\bulk-upload-data\\
+ndtp.data-smart-tiling-dir=C:\\data\\mago3d\\smart-tiling\\
 ndtp.data-attribute-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
 ndtp.data-object-attribute-upload-dir=C:\\data\\mago3d\\attribute\\
 
-# 가이드 데이터 경로
+ndtp.layer-upload-dir=C:\\data\\ndtp\\ndtp-admin\\upload\\layer\\
+ndtp.layer-export-dir=C:\\data\\ndtp\\ndtp-admin\\export\\temp\\
+
+#\uAC00\uC774\uB4DC \uB370\uC774\uD130 \uACBD\uB85C
 ndtp.guide-data-service-dir=C:\\data\\mago3d\\guide\\f4d\\
