관리자 운영정책, 공간 정보 운영 정책, 메뉴, Role 등이 수정 되었을때 사용자 Cache 갱신 "#50 github 이슈 타이틀"

--- a/ndtp-admin/src/main/resources/develop/ndtp.properties
+++ b/ndtp-admin/src/main/resources/develop/ndtp.properties
@@ -1,3 +1,4 @@
+ndtp.profile=local
 ndtp.os-type=WINDOW
 ndtp.mock-enable=true
 ndtp.call-remote-enable=true
@@ -5,6 +6,8 @@ ndtp.server-ip=localhost
 ndtp.rest-template-mode=http
 ndtp.rest-auth-key=
 
+# external_service 테이블에서 관리 되어야 하지만, 임시 처리
+ndtp.cache-client-url=http://localhost/
 ndtp.gis-rest-server=http://192.168.10.9:8080/
 
 ndtp.queue-server-host=localhost
