대시보드 요청 url 하드코딩 제거 #49

--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -9,6 +9,7 @@ ndtp.rest-auth-key=
 # external_service 테이블에서 관리 되어야 하지만, 임시 처리
 ndtp.cache-client-url=http://localhost/
 ndtp.gis-rest-server=http://localhost:19090/
+ndtp.rest-server=http://localhost:9090
 
 ndtp.queue-server-host=localhost
 ndtp.queue-server-port=5672
