설정 파일 수정

--- a/ndtp-admin/src/main/resources/develop/ndtp.properties
+++ b/ndtp-admin/src/main/resources/develop/ndtp.properties
@@ -40,3 +40,5 @@ ndtp.layer-export-dir=C:\\data\\ndtp\\ndtp-admin\\export\\temp\\
 
 #\uAC00\uC774\uB4DC \uB370\uC774\uD130 \uACBD\uB85C
 ndtp.guide-data-service-dir=C:\\data\\mago3d\\guide\\f4d\\
+
+ndtp.ogr2ogr-enviroment-path=QGIS_HOME
