--- a/ndtp-admin/src/main/resources/application.properties
+++ b/ndtp-admin/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
+# PUT 같은 메소드 지원을 위해
+spring.mvc.hiddenmethod.filter.enabled=true
+
 # bean 이름을 overring 하겠다는 것
 #spring.main.allow-bean-definition-overriding=true
 
