--- a/ndtp-user/src/main/resources/ndtp.properties
+++ b/ndtp-user/src/main/resources/ndtp.properties
@@ -37,3 +37,4 @@ ndtp.service-f4d-output-dir=C:\\data\\mago3d\\f4d\\ds-service\\output\\
 ndtp.service-f4d-finish-root-dir=C:\\data\\mago3d\\f4d\\ds-service\\finish\\
 ndtp.service-f4d-fail-root-dir=C:\\data\\mago3d\\f4d\\ds-service\\fail\\
 ndtp.service-file-upload-dir=C:\\data\\mago3d\\normal-upload-data\\
+ndtp.service-file-buildingobj-dir=C:\\data\\mago3d\\building_obj\\
