--- a/ndtp-admin/build.gradle
+++ b/ndtp-admin/build.gradle
@@ -119,10 +119,10 @@ dependencies {
     
     //implementation 'org.junit:junit-bom:5.6.0'
     
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
-	testCompileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+	testCompileOnly 'org.projectlombok:lombok:1.18.12'
 	
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
