--- a/ndtp-admin/build.gradle
+++ b/ndtp-admin/build.gradle
@@ -29,6 +29,9 @@ repositories {
     maven {
         url "https://repo.boundlessgeo.com/main"
     }
+    maven {
+        url "https://repo.osgeo.org/repository/release/"
+    }
 	mavenCentral()
 }
 
@@ -93,6 +96,9 @@ dependencies {
     implementation 'org.geotools:gt-shapefile:22.2'
     implementation 'org.geotools.xsd:gt-xsd-core:22.2'
     implementation 'org.geotools.xsd:gt-xsd-sld:22.2'
+    implementation 'org.geotools.jdbc:gt-jdbc-postgis:22.2'
+
+
     implementation 'org.apache.commons:commons-compress:1.18'
 	
 	implementation 'org.modelmapper:modelmapper:2.3.6'
