--- a/ndtp-admin/src/main/resources/ndtp.properties
+++ b/ndtp-admin/src/main/resources/ndtp.properties
@@ -42,3 +42,5 @@ ndtp.layer-export-dir=C:\\data\\ndtp\\ndtp-admin\\export\\temp\\
 ndtp.guide-data-service-dir=C:\\data\\mago3d\\guide\\f4d\\
 
 ndtp.ogr2ogr-enviroment-path=QGIS_HOME
+ndtp.ogr2ogr-host=localhost
+ndtp.ogr2ogr-port=15432
